--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "license": "Apache-2.0",
     "type": "module",
     "dependencies": {
+        "chalk": "^5.3.0",
         "chia-daemon": "^0.10.1",
         "command-line-args": "^5.2.1",
         "command-line-usage": "^7.0.1",
